--- a/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
+++ b/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
@@ -18,6 +18,26 @@ accordeons:
   - titre: "Application"
     contenu: |
       Résoudre $f(x)=0$ via la forme canonique.
+  - titre: "Repère trigonométrique"
+    contenu: |
+      Visualise la position de l'angle $\theta$ sur le cercle trigonométrique pour relier forme canonique et représentation géométrique.
+
+      \[
+      \begin{tikzpicture}[scale=1.3]
+        \coordinate (P) at ({cos(40)},{sin(40)});
+        \draw[->,gray!50] (-1.2,0) -- (1.3,0) node[right] {$x$};
+        \draw[->,gray!50] (0,-1.2) -- (0,1.3) node[above] {$y$};
+        \draw[very thick,blue!40] (0,0) circle (1);
+        \draw[->,orange!80!black,thick] (0,0) -- (P);
+        \draw[orange!80!black,thick] (0.35,0) arc (0:40:0.35);
+        \draw[dashed,orange!60] (P) -- ({cos(40)},0);
+        \draw[dashed,orange!60] (P) -- (0,{sin(40)});
+        \filldraw[orange!80!black] (P) circle (0.03);
+        \node[orange!80!black, anchor=west] at (0.32,0.08) {$\theta$};
+        \node[below] at ({cos(40)},0) {$\cos \theta$};
+        \node[left] at (0,{sin(40)}) {$\sin \theta$};
+      \end{tikzpicture}
+      \]
 liens:
   - type: "rapido"
     label: "Rapido 2.4"
@@ -33,3 +53,5 @@ liens:
 La forme canonique d'un trinôme $ax^2+bx+c$ permet de lire directement le sommet de la parabole représentative.
 
 En posant $\alpha = -\dfrac{b}{2a}$ et $\beta = f(\alpha)$, on obtient $ax^2+bx+c = a(x-\alpha)^2 + \beta$.
+
+Le cercle trigonométrique ci-dessous illustre les liens entre coordonnées $(\cos \theta, \sin \theta)$ d'un point et la représentation géométrique d'un trinôme lorsque l'on étudie son signe.
