Improve print layouts, math rendering, and QR display

--- a/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
+++ b/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
@@ -23,6 +23,7 @@ accordeons:
       Visualise la position de l'angle $\theta$ sur le cercle trigonométrique pour relier forme canonique et représentation géométrique.
 
       \[
+      \require{tikz}
       \begin{tikzpicture}[scale=1.3]
         \coordinate (P) at ({cos(40)},{sin(40)});
         \draw[->,gray!50] (-1.2,0) -- (1.3,0) node[right] {$x$};
