--- a/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
+++ b/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
@@ -22,23 +22,22 @@ accordeons:
     contenu: |
       Visualise la position de l'angle $\theta$ sur le cercle trigonométrique pour relier forme canonique et représentation géométrique.
 
-      \[
-      \require{tikz}
-      \begin{tikzpicture}[scale=1.3]
-        \coordinate (P) at ({cos(40)},{sin(40)});
-        \draw[->,gray!50] (-1.2,0) -- (1.3,0) node[right] {$x$};
-        \draw[->,gray!50] (0,-1.2) -- (0,1.3) node[above] {$y$};
-        \draw[very thick,blue!40] (0,0) circle (1);
-        \draw[->,orange!80!black,thick] (0,0) -- (P);
-        \draw[orange!80!black,thick] (0.35,0) arc (0:40:0.35);
-        \draw[dashed,orange!60] (P) -- ({cos(40)},0);
-        \draw[dashed,orange!60] (P) -- (0,{sin(40)});
-        \filldraw[orange!80!black] (P) circle (0.03);
-        \node[orange!80!black, anchor=west] at (0.32,0.08) {$\theta$};
-        \node[below] at ({cos(40)},0) {$\cos \theta$};
-        \node[left] at (0,{sin(40)}) {$\sin \theta$};
-      \end{tikzpicture}
-      \]
+      <script type="text/tikz">
+        \begin{tikzpicture}[scale=1.3]
+          \coordinate (P) at ({cos(40)},{sin(40)});
+          \draw[->,gray!50] (-1.2,0) -- (1.3,0) node[right] {$x$};
+          \draw[->,gray!50] (0,-1.2) -- (0,1.3) node[above] {$y$};
+          \draw[very thick,blue!40] (0,0) circle (1);
+          \draw[->,orange!80!black,thick] (0,0) -- (P);
+          \draw[orange!80!black,thick] (0.35,0) arc (0:40:0.35);
+          \draw[dashed,orange!60] (P) -- ({cos(40)},0);
+          \draw[dashed,orange!60] (P) -- (0,{sin(40)});
+          \filldraw[orange!80!black] (P) circle (0.03);
+          \node[orange!80!black, anchor=west] at (0.32,0.08) {$\theta$};
+          \node[below] at ({cos(40)},0) {$\cos \theta$};
+          \node[left] at (0,{sin(40)}) {$\sin \theta$};
+        \end{tikzpicture}
+      </script>
 liens:
   - type: "rapido"
     label: "Rapido 2.4"
