Add metadata for factorisation canonique lesson

--- a/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
+++ b/content/terminale/algebre/2-factoriser-une-expression/2.4-factorisation-canonique.md
@@ -6,6 +6,13 @@ niveau: "Terminale"
 theme: "Algèbre"
 sous_theme: "2. Factoriser une expression"
 objectif: "Factoriser un trinôme sous forme canonique."
+tags:
+  - "trinôme"
+  - "parabole"
+  - "forme canonique"
+difficulte: "intermédiaire"
+date: "2024-05-20"
+illustration: "https://maths974.fr/illustrations/algebre/forme-canonique-parabole.png"
 contenus:
   - "$ax^2 + bx + c = a(x - \\alpha)^2 + \\beta$"
 rappel: "Utile pour le signe et le sommet de la parabole."
