restructuration du css

--- a/src/content/rapidos/sixieme/P1-S1.md
+++ b/src/content/rapidos/sixieme/P1-S1.md
@@ -1,12 +1,10 @@
 ---
-title: "Nombres et Calculs - S1"
+title: "Nombres et Calculs"
 niveau: "6ème"
-periode: 1
-semaine: 1
 questions:
-  - "Calculer $3 \\times 7 + 5$"
-  - "Quel est le chiffre des dizaines dans 458 ?"
-  - "Convertir 3 km en mètres."
-  - "Compléter : $15 + \\dots = 20$"
-  - "Tracer un angle obtus à main levée."
+  - "Combien font 3 + 4 ?"
+  - "Quelle est la moitié de 18 ?"
+  - "Trace un carré."
+  - "Convertis 1km en m."
+  - "Cite un nombre pair."
 ---
