restructuration du css

--- a/src/content/rapidos/sixieme/P1-S1.md
+++ b/src/content/rapidos/sixieme/P1-S1.md
@@ -1,10 +1,17 @@
 ---
-title: "Nombres et Calculs"
+numero: "1.1"
 niveau: "6ème"
+periode: 1
+semaine: 1
 questions:
-  - "Combien font 3 + 4 ?"
-  - "Quelle est la moitié de 18 ?"
-  - "Trace un carré."
-  - "Convertis 1km en m."
-  - "Cite un nombre pair."
+  - texte: "Quel nombre est représenté par ce dessin ?"
+    gs: "GS 1.1"
+  - texte: "Complète : $15 + \\dots = 20$"
+    gs: "GS 1.4"
+  - texte: "Quel est le périmètre de cette figure ?"
+    gs: "GS 10.2"
+  - texte: "Je suis un quadrilatère avec 4 côtés égaux."
+    gs: "GS 18.2"
+  - texte: "Jean a 32 billes. Il en a 15 de moins que Marie. Combien en a Marie ?"
+    gs: "GS 27.2"
 ---
