--- a/src/content/guide/sixieme/01-nombres-et-calculs/01-nombres-entiers/1.3-chiffre-nombre.md
+++ b/src/content/guide/sixieme/01-nombres-et-calculs/01-nombres-entiers/1.3-chiffre-nombre.md
@@ -2,6 +2,7 @@
 title: "1.3 Chiffre des... et Nombre de..."
 id: "6-NC-1.3"
 format: "1/4"
+full_width: true
 erreurs_frequentes:
   - "Confondre le chiffre (position) et le nombre (quantité totale)."
 ---
